@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2013-04-24  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/reaction-arrow.cc: add more properties.
+	* libs/gcp/reaction-arrow.h: ditto.
+
 2013-04-23  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/reaction-arrow.cc: add a PositionChildren() method.
 	* libs/gcp/reaction-arrow.h: ditto.
